# caltech-ldmx

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot_basic.py  summarize_events.py  track_event_display.py  vrml_event_display.py  vtk_event_display.py
docs/: baseline_mip_calibration.md  controlled_background_samples.md  technical_framework.md
event-display-3d/: index.html  package-lock.json  package.json
event-display-3d/public/: event.json
event-display-3d/scripts/: vrml_to_event_json.py
event-display-3d/src/: main.js  styles.css
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  FileVisManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: run_mu_gamma_15gev.mac  run_mu_hadron_15gev.mac  run_mu_pair_15gev.mac  run_muon.mac  run_muon_15gev.mac  vis_ogls.mac  vis_qt.mac  vis_tsgqt.mac  vis_vrml.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  FileVisManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc  main.cc
